fixed font-size on small devices

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -378,3 +378,9 @@ iframe {
   height: 1000px;
  }
 }
+
+@media screen and (max-width: 320px) {
+ p {
+  font-size: .8em;
+ }
+}
